# bazel_course

./: MODULE.bazel  README.md  WORKSPACE  build_file_lecture.md  graph.in  macros_lecture.md  query_lecture.md  workspace_lecture.md
.devcontainer/: devcontainer.json  install-bazel.sh
app/client/: BUILD.bazel  cli.py
app/server/: BUILD.bazel  config.template  main.cc
broken_package/: BUILD.bazel
build_tools/: BUILD.bazel  macros.bzl  my_repo.bzl
core/: BUILD.bazel  base_logger.py  memory.cc  memory.h
tests/: BUILD.bazel  client_test.py  server_test.cc  shared_test.cc
toolchains/: BUILD.bazel
tools/codegen/: BUILD.bazel  generator.py
utils/: BUILD.bazel  format.py  math.cc  math.h  math_test.cc  string_utils.cc  string_utils.h  system_name_default.cc  system_name_linux.cc  system_name_mac.cc
